@@ -47,6 +47,7 @@ import android.app.ActivityManager;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
+import android.content.pm.PackageManager;
 import android.os.Build;
 import android.os.UserManager;
 import android.service.quicksettings.TileService;
@@ -116,6 +117,7 @@ import com.android.bedstead.harrier.annotations.RequireRunOnVisibleBackgroundNon
 import com.android.bedstead.harrier.annotations.RequireSdkVersion;
 import com.android.bedstead.harrier.annotations.RequireSystemServiceAvailable;
 import com.android.bedstead.harrier.annotations.RequireTargetSdkVersion;
+import com.android.bedstead.harrier.annotations.RequireTelephonySupport;
 import com.android.bedstead.harrier.annotations.RequireUserSupported;
 import com.android.bedstead.harrier.annotations.RequireVisibleBackgroundUsers;
 import com.android.bedstead.harrier.annotations.RequireVisibleBackgroundUsersOnDefaultDisplay;
@@ -211,6 +213,7 @@ import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * A Junit rule which exposes methods for efficiently changing and querying device state.
@@ -273,6 +276,8 @@ public final class DeviceState extends HarrierRule {
 
     private final ExecutorService mTestExecutor = Executors.newSingleThreadExecutor();
     private Thread mTestThread;
+
+    private PackageManager mPackageManager = sContext.getPackageManager();
 
     public static final class Builder {
 
@@ -1283,6 +1288,15 @@ public final class DeviceState extends HarrierRule {
                 checkFailOrSkip("Device does not have quick settings",
                         TileService.isQuickSettingsSupported(),
                         requireQuickSettingsSupport.failureMode());
+                continue;
+            }
+
+            if (annotation instanceof RequireTelephonySupport) {
+                RequireTelephonySupport requireTelephonySupport =
+                        (RequireTelephonySupport) annotation;
+                checkFailOrSkip("Device does not have telephony support",
+                        mPackageManager.hasSystemFeature(PackageManager.FEATURE_TELEPHONY),
+                        requireTelephonySupport.failureMode());
                 continue;
             }
 
@@ -3076,7 +3090,7 @@ public final class DeviceState extends HarrierRule {
 
             for (UserReference u : TestApis.users().all().stream()
                     .sorted(Comparator.comparing(u -> u.equals(instrumented)).reversed())
-                    .toList()) {
+                    .collect(Collectors.toList())) {
                 if (u.isSystem()) {
                     continue;
                 }
